# mrna_petrinet

./: .gitignore  README.md  pyproject.toml
asset_files/: input_w_ribo.json  output_ribo_pnet.json
scripts/: run_chains_marking_analysis.py  run_chains_marking_experiment.py  run_chains_marking_plots.py  run_mrna_ribosome_simulation.py  run_mrna_simulation.py  run_multiple_ribosome_simulations.py  run_ribosome_simulations_analysis.py
src/mrna_petrinet/mrna2pnet_adapters/: mrna2pnet.py  mrna_ribo2pnet.py
tests/: mrna_tests.py
